# mutextrace

./: .gitignore  Makefile.am  autogen.sh  configure.ac  mutex_destroy.c  mutex_init.c  mutex_lock.c  mutex_unlock.c  mutextrace.c  real.c  real.h  store.c  store.h  thread_create.c
tests/: .gitignore  Makefile.am  common.c  common.h  mutex_timeout.c  mutex_working.c  two_threads_one_mutex.c
